--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ build/
 
 ### VS Code ###
 .vscode/
+/src/main/resources/application-dev.yaml
+/DataStorage/src/main/resources/application-dev.yaml
+/TeleBot/src/main/resources/application-dev.yaml
