Разделение на frontend и backend модули, инициализация Next.js

--- a/backend/DataStorage/src/main/resources/application.yaml
+++ b/backend/DataStorage/src/main/resources/application.yaml
@@ -1,7 +1,5 @@
 server:
   port: 9092
-bot:
-  port: 9093
 
 spring:
   profiles:
@@ -17,5 +15,5 @@ logging:
   level:
     ru.telebot: DEBUG
   file:
-    name: ./DataStorage/logs/app.log
+    name: ./backend/DataStorage/logs/app.log
     path: logs
