--- a/backend/DataStorage/pom.xml
+++ b/backend/DataStorage/pom.xml
@@ -4,34 +4,47 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ru</groupId>
-        <artifactId>TeleBotJava</artifactId>
+        <artifactId>backend</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>TeleBot</artifactId>
+    <artifactId>DataStorage</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
 
     <properties>
         <java.version>21</java.version>
-        <telegrambot.starter.version>6.9.7.1</telegrambot.starter.version>
     </properties>
 
     <dependencies>
-        <!-- Telegram API -->
+        <!-- Hibernate -->
         <dependency>
-            <groupId>org.telegram</groupId>
-            <artifactId>telegrambots-spring-boot-starter</artifactId>
-            <version>${telegrambot.starter.version}</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-envers</artifactId>
+            <version>6.5.3.Final</version>
         </dependency>
-        <!-- <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter</artifactId>
-            <version>4.1.0</version>
-        </dependency> -->
+
+        <!-- postgresql -->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>4.1.4</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.2</version>
+        </dependency>
+
+        <!--H2-->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!--JPA-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <!--Liquibase-->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
         </dependency>
     </dependencies>
 
