Набросок страницы мененджера, добавление функционала обработки клиента и добавления его в БД

--- a/backend/TeleBot/src/main/resources/application.yaml
+++ b/backend/TeleBot/src/main/resources/application.yaml
@@ -6,6 +6,10 @@ dataStorage:
 spring:
   profiles:
     active: dev
+  cloud:
+    inetutils:
+      preferred-networks: 127.0.0.1
+      timeout-seconds: 1
 
 logging:
   level:
