Интеграция 1С в приложение: получение списка телефонов в наличии с настраиваемым интервалом (установлено обновление в 1 сутки) и добавление контрагентов покупателей в базу 1С. Переработаны структуры хранения списка телефонов и функции с их взаимодействием. Удаление таблицы телефонов из БД pgsql. Изменение структуры UserDto

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ yarn-error.log*
 next-env.d.ts
 /backend/TeleBot/src/main/resources/application-dev.yaml
 /backend/DataStorage/src/main/resources/application-dev.yaml
+/backend/OneC/src/main/resources/application-dev.yaml
