--- a/backend/TeleBot/src/main/resources/application.yaml
+++ b/backend/TeleBot/src/main/resources/application.yaml
@@ -1,7 +1,11 @@
 server:
   port: 9093
-dataStorage:
-  url: http://localhost:9092
+
+serviceUrl:
+  dataStorage: http://localhost:9092
+  oneC: http://localhost:9094
+  frontend: http://localhost:9090
+
 
 spring:
   profiles:
@@ -15,5 +19,8 @@ logging:
   level:
     ru.telebot: DEBUG
   file:
-    name: ./backend/TeleBot/logs/app.log
+    name: ./backend/OneC/logs/app.log
     path: logs
+
+interval:
+  phones: PT24H
