--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,9 +16,22 @@
     <modules>
         <module>TeleBot</module>
         <module>DataStorage</module>
+        <module>OneC</module>
+        <module>Library</module>
     </modules>
 
     <dependencies>
+        <dependency>
+            <groupId>ru</groupId>
+            <artifactId>Library</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <!-- FeignClient -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>4.1.4</version>
+        </dependency>
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -32,20 +45,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!-- Spring Boot starter -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter</artifactId>-->
+<!--        </dependency>-->
         <!-- Spring Boot devtools -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-logging</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
