--- a/backend/DataStorage/src/main/resources/application.yaml
+++ b/backend/DataStorage/src/main/resources/application.yaml
@@ -2,12 +2,10 @@ server:
   port: 9092
 
 spring:
+  jackson:
+    time-zone: Europe/Moscow
   profiles:
-    active: dev
-  datasource:
-    url: jdbc:postgresql://localhost:5432/iMarket
-    username: postgres
-    password: 123
+    active: prod
   liquibase:
     change-log: db/changelog/changelog.xml
     url: ${spring.datasource.url}
