--- a/.gitignore
+++ b/.gitignore
@@ -64,9 +64,6 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-
 # vercel
 .vercel
 
@@ -76,3 +73,6 @@ next-env.d.ts
 /backend/TeleBot/src/main/resources/application-dev.yaml
 /backend/DataStorage/src/main/resources/application-dev.yaml
 /backend/OneC/src/main/resources/application-dev.yaml
+/backend/TeleBot/src/main/resources/application-prod.yaml
+/backend/OneC/src/main/resources/application-prod.yaml
+/backend/DataStorage/src/main/resources/application-prod.yaml
