--- a/backend/DataStorage/pom.xml
+++ b/backend/DataStorage/pom.xml
@@ -4,11 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ru</groupId>
-        <artifactId>backend</artifactId>
+        <artifactId>TeleBotJava</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>DataStorage</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>21</java.version>
