--- a/backend/OneC/src/main/resources/application.yaml
+++ b/backend/OneC/src/main/resources/application.yaml
@@ -8,8 +8,10 @@ serviceUrl:
     addUser: /${1c.url.publication}/hs/tgBot/addCustomer
 
 spring:
+  jackson:
+    time-zone: Europe/Moscow
   profiles:
-    active: dev
+    active: prod
   cloud:
     inetutils:
       preferred-networks: 127.0.0.1
@@ -19,5 +21,5 @@ logging:
   level:
     ru.onec: DEBUG
   file:
-    name: ./backend/TeleBot/logs/app.log
+    name: ./backend/OneC/logs/app.log
     path: logs
