--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookies-next": "^5.1.0",
     "next": "15.2.2",
+    "nookies": "^2.5.2",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "22.13.10",
     "@types/react": "18.0.26",
+    "@types/universal-cookie": "^2.2.0",
     "axios": "^1.8.4",
     "typescript": "4.9.4"
   }
