Финальная авторизация с возможностью изменить данные с аккаунта админа в тг боте через админ панель

--- a/backend/TeleBot/src/main/resources/application.yaml
+++ b/backend/TeleBot/src/main/resources/application.yaml
@@ -26,3 +26,5 @@ logging:
 
 interval:
   phones: PT4H
+
+propsFile: ./backend/TeleBot/src/main/resources/application-${spring.profiles.active}.yaml
