--- a/backend/TeleBot/pom.xml
+++ b/backend/TeleBot/pom.xml
@@ -17,6 +17,12 @@
     </properties>
 
     <dependencies>
+        <!-- Шифрование -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>6.4.4</version>
+        </dependency>
         <!-- Telegram API -->
         <dependency>
             <groupId>org.telegram</groupId>
