--- a/backend/TeleBot/src/main/resources/application-example.yaml
+++ b/backend/TeleBot/src/main/resources/application-example.yaml
@@ -4,4 +4,5 @@ bot:
   channelName: channelName
   managerId: managerId
   adminId: adminId
+  serverUrl: 192.168.0.100:9090
   loyaltyUrl: ссылка_на_домен
