--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,24 +4,20 @@ services:
     container_name: db-iMarket
     image: postgres:14.7-alpine
     restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 123
-      POSTGRES_DB: iMarket
     volumes:
       - ./infrastructure/db/init.sql:/docker-entrypoint-initdb.d/init.sql
       - db-data:/var/lib/postgresql/data
     networks:
       - smart-store-network
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: iMarket
 
   pgadmin:
     container_name: pgadmin4
     image: dpage/pgadmin4:7
     restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: root
-      PGADMIN_LISTEN_PORT: 80
     depends_on:
       - db
     ports:
@@ -30,6 +26,10 @@ services:
       - pgadmin-data:/var/lib/pgadmin
     networks:
       - smart-store-network
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+      PGADMIN_LISTEN_PORT: 80
 
   DataStorage-image:
     container_name: ms-DataStorage
@@ -55,9 +55,11 @@ services:
     restart: always
     networks:
       - smart-store-network
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
       - SERVER_PORT=9094
-      - SPRING_PROFILES_ACTIVE=dev
+      - SPRING_PROFILES_ACTIVE=prod
 
   TeleBot-image:
     container_name: ms-TeleBot
@@ -76,7 +78,7 @@ services:
       - SERVICEURL_DATASTORAGE=http://ms-DataStorage:9092
       - SERVICEURL_ONEC=http://ms-OneC:9094
       - SERVICEURL_FRONTEND=http://frontend:9090
-      - SPRING_PROFILES_ACTIVE=dev
+      - SPRING_PROFILES_ACTIVE=prod
 
   frontend-image:
     container_name: frontend
@@ -87,12 +89,12 @@ services:
     restart: always
     ports:
       - "9090:9090"
-    environment:
-      - BACKEND_URL=http://ms-TeleBot:9093
     depends_on:
       - TeleBot-image
     networks:
       - smart-store-network
+    environment:
+      - BACKEND_URL=http://ms-TeleBot:9093
 
 networks:
   smart-store-network:
