Обработка ошибки, когда tg username скрыт/не установлен

--- a/backend/DataStorage/pom.xml
+++ b/backend/DataStorage/pom.xml
@@ -6,9 +6,10 @@
         <groupId>ru</groupId>
         <artifactId>TeleBotJava</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>DataStorage</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
