--- a/backend/OneC/pom.xml
+++ b/backend/OneC/pom.xml
@@ -6,10 +6,11 @@
 		<groupId>ru</groupId>
 		<artifactId>TeleBotJava</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>OneC</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<name>OneC</name>
 	<description>OneC</description>
 
